# IHATECPPMORE

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ini .editorconfig
.github/workflows/: cmake-single-platform.yml
MyCuteGame/: CMakeLists.txt  MyCuteGame.cpp  MyCuteGame.h
docs/: BaseObject.md  BasePhysics.md  DrawingSequence.md  GlobalPlayer.md  ObjManager.md  ObjToken.md  Overview.md  PhysicsSystem.md  PngSprite.md
docs/object_manage/: BaseObject.md  DrawingSequence.md  InstanceController.md  object_manage.mermaid
head/: UI_draw.h  act_seq.h  base_object.h  base_physics.h  debug_config.h  delegate.h  drawing_sequence.h  globalplayer.h  input.h  obj_manager.h  object_token.h  png_sprite.h  room_loader.h  v2math.h
objects/: backgroud.cpp  backgroud.h  block_object.h  bullet.cpp  bullet.h  checkpoint.cpp  checkpoint.h  diablock_object.h  diagonal_move_spike.cpp  diagonal_move_spike.h  diagonal_move_spike_left.cpp  diagonal_move_spike_left.h  down_move_spike.cpp  down_move_spike_first.cpp  down_move_spike_first.h  down_spike.cpp  down_spike.h  end.h  hidden_block.cpp  hidden_block.h  hidden_rotated_spike.cpp  hidden_rotated_spike.h  hidden_spike.cpp  lateral_spike.cpp  lateral_spike.h  left_move_block.cpp  move_spike.cpp  player_object.cpp  player_object.h  right_move_block.cpp  rotate_spike.cpp  rotate_spike.h  spike.cpp  spike.h  test_block.cpp  test_block.h  test_object.cpp  test_object.h  up_move_spike.cpp  up_move_spike.h  (+2 more)
reports/: debug_log_20251218_1631.txt  debug_log_20251218_1632.txt  debug_log_20251218_1638.txt  debug_log_20251218_1639.txt  debug_log_20251218_1647.txt  debug_log_20251218_1754.txt  debug_log_20251218_1807.txt  debug_log_20251218_1812.txt  debug_log_20251218_2019.txt  debug_log_20251218_2020.txt  debug_log_20251218_2021.txt  debug_log_20251218_2022.txt  debug_log_20251218_2023.txt  debug_log_20251218_2024.txt  debug_log_20251218_2025.txt  debug_log_20251218_2027.txt  debug_log_20251218_2028.txt  debug_log_20251218_2029.txt  debug_log_20251218_2030.txt
rooms/: EmptyRoom.cpp  EndRoom.cpp  FirstRoom.cpp  TestRoom.cpp  nextroom.cpp
src/: Collider.cpp  DrawingSequence.cpp  ObjManager.cpp  PngSprite.cpp  base_object.cpp  base_object_debug.cpp  base_physics_rotate.cpp  drawing_sequence.cpp  main.cpp
